feat: Implement comprehensive OAuth 2.0 and session management system
## New Features

### Authentication Components
- OAuth Token Manager (oauth_token_manager.py)
  * JWT token creation and validation
  * Automatic token refresh
  * Token revocation support
  * Expiration threshold checking

- Redis Session Store (redis_session_store.py)
  * Persistent session storage with Redis
  * Automatic TTL management
  * Development fallback to in-memory storage
  * Health checks and monitoring

- Authentication Middleware (auth_middleware.py)
  * Decorator-based endpoint protection
  * Bearer token extraction and validation
  * Scope-based authorization
  * Automatic token refresh on expiration

### Security Features
- Rate Limiting (security_utils.py)
  * Per-user/IP rate limiting
  * Configurable request limits
  * 429 Too Many Requests response

- CSRF Protection
  * Secure token generation
  * Constant-time token comparison

- Password Validation
  * Strength requirements (uppercase, lowercase, digit, special char)
  * PBKDF2 hashing with salt
  * Password verification

- Input Validation
  * String sanitization
  * Null byte removal
  * Email validation

### API Endpoints
- POST /api/authenticate
  * Generate new tokens
  * Refresh existing tokens
  * Validate tokens

### Documentation
- AUTHENTICATION.md - Complete authentication guide
- SECURITY.md - Security best practices and guidelines
- AUTHENTICATION_IMPLEMENTATION_GUIDE.md - Quick start and integration examples
- AUTHENTICATION_TEST_REPORT.md - Test results (21/21 passed)

### Testing
- Comprehensive test suite (test_authentication.py)
  * 21 unit tests covering all components
  * 100% pass rate
  * Tests for OAuth, sessions, rate limiting, CSRF, passwords, input validation

### Dependencies Added
- redis - Session storage
- PyJWT - JWT token handling
- cryptography - Secure operations
- python-dotenv - Environment configuration
- slowapi - Rate limiting
- flask-cors - CORS support

## Security Improvements
- O

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,9 @@ google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 dropbox
+redis
+PyJWT
+cryptography
+python-dotenv
+slowapi
+flask-cors
